# Boas

./: .gitignore  BOAS_CLI_QUICKSTART.md  BOAS_LANGUAGE_DESIGN.md  CLI_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  COMPILE_AND_RUN_GUIDE.md  COMPLETION_NOTES.md  DEVELOPMENT_SUMMARY.md  DIRECT_HARDWARE_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_TECHNICAL_REPORT.md  GITHUB_PUSH_GUIDE.md  GIT_PUSH_INSTRUCTIONS.md  GIT_PUSH_STATUS.md  HOW_TO_PUSH.md  IMPLEMENTATION_ROADMAP.md  LANGUAGE_EXTENSION_SUMMARY.md  LICENSE  LOWERING_PASS_REPORT.md  MANUAL_PUSH_GUIDE.md  MATMUL_PROGRESS.md  MLIR_DIALECT_EXTENSIONS.md  MOJO_STDLIB_INTEGRATION.md  NPU_INTEGRATION_STATUS.md  PROJECT_COMPLETE_SUMMARY_CN.md  PROJECT_RELEASE_SUMMARY.md  PUSH_INSTRUCTIONS.md  PUSH_TO_GITHUB.sh  PUSH_TO_GITHUB_GUIDE.md  README.md  READY_TO_PUSH.md  RELEASE.md  RUNTIME_EXECUTION_GUIDE.md  RUNTIME_SUMMARY.md  TEST_REPORT.md  a.out  boas  cleanup_project.py  configure_git_auth.sh  configure_github_auth.sh  (+28 more)
.claude/: settings.local.json
benchmark/: CMakeLists.txt  README.md  analyze_performance.py  benchmark_direct_hardware.py  boas_benchmark.py  boas_vs_pytorch_comparison.py  comprehensive_comparison.py  fp16_performance_validation.py  framework_comparison.py  gpu_vs_npu_benchmark.py  performance_visualizer.py  run_all_benchmarks.py  simple_benchmark.py  small_matrix_optimization_test.py  temp.ll  temp.llvm.mlir  temp.mlir  temp.s  triton_ascend_benchmark.py
benchmark/include/: benchmark.h
benchmark/results/: results.csv
benchmark/results/instruments/: analysis_report.txt  cpu_profile.txt  full_profile.txt  memory_profile.txt
benchmark/scripts/: plot.py  run_bench.ps1  run_bench.sh
benchmark/src/: JavaBench.java  a.out  boas_bench.bs  cpp_bench.cpp  go_bench.go  perf_analysis.cpp  python_bench.py  temp.ll  temp.llvm.mlir  temp.mlir  temp.s
docs/: BoasToLinalgDesign.md  GPU_SUPPORT.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_FINAL_ORGANIZATION.md  PROJECT_STRUCTURE.md  QUICKSTART_GPU.md
docs/design/: BOAS_DIALECT_GUIDE.md
docs/reports/: ACTUAL_IMPLEMENTATION_STATUS.md  BENCHMARK_COMPARISON_FINAL.md  BOAS_CANN_INTEGRATION_ANALYSIS.md  CANN_INTEGRATION_SUCCESS.md  COMPILATION_FIXES_SUCCESS.md  END_TO_END_SUCCESS.md  LLVM20_SUCCESS_SUMMARY.md  NPU_ADAPTATION.md  NPU_IMPLEMENTATION_SUMMARY.md  NPU_TEST_SUMMARY.md  OPTIMIZATION_PHASE_COMPLETE.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_BENCHMARK_RESULTS.md  PROJECT_SUMMARY.md  RESULT_VERIFICATION_COMPLETE.md  npu_performance_summary.md  npu_test_results.md
examples/: boas_dialect_demo.py  boas_npu_matmul_demo.py  calc.bs  hello.bs  hello_def.bs  hello_print.bs  hello_world.bs  language_demo.boas  matmul_large.bs  matmul_minimal.mlir  matmul_simple.bs  matmul_simple.mlir  matrix_ops.bs  neural_net.bs  npu_auto_optimization_demo.bs  npu_matmul_monitor.py  npu_optimized.bs  run_tests.sh  test_npu_device.bs
examples/basic/: print_numbers.bs
examples/expected/: print_numbers_build.txt
include/: Debug.h
include/boas/: AST.h  BoasOps.td  Dialect.h  Error.h  LLVMGen.h  Lexer.h  MLIRGen.h  Parser.h  SemanticAnalyzer.h  Token.h  Value.h  config.h.in
include/frontend/: AST.h  ASTImpl.h  BasicAST.h  ComprehensionAST.h  ControlFlowAST.h  FunctionAST.h  Lexer.h  MatrixDialect.td  ModuleAST.h  Parser.h  PythonAST.h  PythonASTParser.h  SimpleAST.h  TensorParser.h
include/mlirops/: CANNRuntime.h  CUDARuntime.h  DeviceManager.h  (+8 more)
lib/: CMakeLists.txt  Debug.cpp
python/: CMakeLists.txt
scripts/: compile_npu_matmul.sh  fix_runtime_env.sh  make_release.sh  monitor_llvm.sh  quick_status.sh  setup_npu_env.sh  test_npu_direct.sh  wait_and_install_llvm20.sh
src/: CMakeLists.txt  main.cpp
src/analyzer/: SemanticAnalyzer.cpp
src/ast/: list_ast.cpp  number_ast.cpp
src/backend/llvm/: llvm_codegen.cpp
src/backend/mlir/: BoasDialect.cpp  MLIRGen.cpp  TensorOps.cpp
src/backend/mlir/conversion/: BoasToLLVM.cpp
src/frontend/: Lexer.cpp  python_frontend.cpp
src/llvm/: LLVMGen.cpp
src/mlir/: MLIRGen.cpp
src/parser/: Parser.cpp
test/: CMakeLists.txt  main.cpp  matmul.bs  matmul.mlir  matmul.txt  matmul_broadcast.bs  random.bs  random.txt  random_test.txt  simple_matmul.mlir  test.py  test_Lexer.cpp  test_ast.cpp  test_full_pipeline.cpp  test_func.txt  test_gpu.txt  test_llvm.cpp  test_mlirgen.cpp  test_parser.cpp  test_python_ast.cpp  test_python_parser.cpp  test_simple_ast.cpp  time.bs  time.txt  time_test.txt
tests/: CMakeLists.txt  README.md  basic_tests.cpp  run_examples.sh  run_tests.sh  test_list.py
tests/basic/: calc.bs  list.bs  matrix_mul.bs  print_def  print_def.ll  test.bs  variable.bs  variable.ll  variable.s
tests/boas/: test_boas_dialect.bs
tests/boas/matrix_tests/: README.md  test_16x16_matrix.bs  test_4x4_matrix.bs  test_8x8_matrix.bs  test_fix_compilation.bs  test_large_matrix.bs  verify_2x2_diagonal.bs  verify_2x2_identity.bs  verify_2x2_simple.bs  verify_2x2_zero.bs
tests/examples/: boas_dialect_example.mlir
tests/expected/: calc.txt  list.txt  matrix_mul.txt  variable.txt
tests/gpu/: test_cuda_runtime.cpp
tests/npu/: monitor_npu_usage.py  quick_perf_test.py  simple_npu_matmul.bs  test_ast.py  test_boas_npu_real.bs  test_boas_simulation.py  test_boas_with_llvm20.py  test_cann_integration.bs  test_cann_simple.bs  test_large_npu_monitor.bs  test_llvm20_npu.bs  test_mixed_precision.bs  test_npu_basic.py  test_npu_direct.py  test_npu_matmul.bs  test_npu_matmul_advanced.bs  test_npu_simple.bs  test_npu_verification.py  test_simple_npu.bs
tests/samples/: basic.bs  test.bs
tests/unit/: list_file.cpp
tests/unit/cpp/: test_direct_hardware.cpp  test_full_pipeline.cpp  test_python_parser.cpp
tests/unit/python/: boas_dialect_comprehensive_test.py  test_2x2_matrix.py  verify_boas_correctness.py
tmp/: boas_test_output.txt.normalized  test_out  test_out.ll  test_out.s
tools/: CMakeLists.txt
tools/boas-compile/: CMakeLists.txt  boas-compile.cpp
tools/boas-opt/: CMakeLists.txt  boas-opt.cpp
tools/boas-run/: CMakeLists.txt  boas-run.cpp
tools/standalone-conversion-test/: CMakeLists.txt  StandaloneMatMulConversion.cpp
(+110 files in other folders)
