add_library(boas
    ast/ast.cpp
    ast/list_ast.cpp
    ast/number_ast.cpp
    frontend/python_frontend.cpp
    backend/mlir/BoasDialect.cpp
    backend/mlir/MLIRGen.cpp
    backend/mlir/Conversion/BoasToLLVM.cpp
)

target_include_directories(boas
    PUBLIC
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/src
    ${MLIR_INCLUDE_DIRS}
    ${LLVM_INCLUDE_DIRS}
    ${Python_INCLUDE_DIRS}
)

target_link_libraries(boas
    PUBLIC
    MLIRIR
    MLIRSupport
    MLIRParser
    MLIRPass
    MLIRTransforms
    MLIRLLVMDialect
    MLIRLLVMToLLVMIRTranslation
    MLIRLLVMIRTransforms
    Python::Python
)
